adding post filtering and hidden posts

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,15 +1,6 @@
 ---
 sitemap: false
----
-
-/*
- *
- *  HPSTR
- *
- *  Designer: Michael Rose
- *  Twitter: http://twitter.com/mmistakes
- *
-*/
+---ß
 
 // Partials
 @import "variables";
