--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -80,9 +80,10 @@ body {
 		font-weight: 700;
 		margin: 10px 60px;
 		color: $white;
-		text-shadow: 1px 1px 4px rgba($base-color,0.6);
+		text-shadow: 1px 1px 3px #000;
 		a {
 			color: $white;
+			text-shadow: 1px 1px 2px #000;
 		}
 		@media #{$large} {
 		}
@@ -91,14 +92,17 @@ body {
 		margin: 0;
 		color: $white;
 		text-transform: uppercase;
+		text-shadow: 1px 1px 3px #000;
 		@media #{$medium} {
 			a {
 				color: $white;
+				text-shadow: 1px 1px 3px #000;
 			}
 		}
 	}
 	p {
 		color: $white;
+		text-shadow: 1px 1px 3px #000;
 	}
 }
 .entry-image {
@@ -307,6 +311,7 @@ header .entry-meta {
 	p > a,
 	li > a {
 		border-bottom: 1px dotted lighten($link-color, 50);
+		text-shadow: None;
 		&:hover {
 			border-bottom-style: solid;
 		}
@@ -315,7 +320,10 @@ header .entry-meta {
 		margin: 0;
 		@include font-rem(28);
 		a { 
-			color: $text-color;
+			color: $link-color;
+			&:hover {
+				color: darken($link-color, 30);
+			}
 		}
 		@media #{$medium} {
 			@include font-rem(36);
@@ -330,7 +338,10 @@ header .entry-meta {
 	text-align: left;
 	h4 { 
 		@include font-rem(18);
-		margin-bottom: 0; 
+		margin-bottom: 0;
+	}
+	a {
+		text-shadow: None;
 	}
 	span { 
 		display: block;
