--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -15,22 +15,24 @@ h1 {
 	@media #{$medium} {
 		@include font-rem(32);
 	}
+	text-shadow: 1px 1px .5px $border-color;
 }
 
 // Links
 // --------------------------------------------------
 a { 
 	text-decoration: none;
-	color: $link-color; 
+	color: $link-color;
+	text-shadow: 0px 0px .5px $border-color;
 	&:visited { 
-		color: lighten($link-color, 20); 
+		color: lighten($link-color, 5); 
 	}
 	&:hover { 
-		color: darken($link-color, 20); 
+		color: darken($link-color, 30); 
 	}
 	&:focus { 
 		outline: thin dotted; 
-		color: darken($link-color, 20);
+		color: darken($link-color, 10);
 	}
 	&:hover, 
 	&:active { 
