--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,14 +1,14 @@
 // Typography
 // --------------------------------------------------
 
-$base-font: 'Lato', Calibri, Arial, sans-serif;
-$heading-font: $base-font;
+$base-font: Verdana, Geneva, sans-serif;
+$heading-font: Century Gothic;
 $caption-font: $base-font;
 $code-font: monospace;
 $alt-font: serif;
 
 $doc-font-size: 16;
-$doc-line-height: 26;
+$doc-line-height: 24;
 
 
 // set-up the body font-size / line-height
@@ -20,20 +20,20 @@ body {
 
 // Colors
 // --------------------------------------------------
-$base-color				   : rgba(#222,0.8);
-$body-color      		 : #e8e8e8;
-$text-color      		 : rgba(#222,0.8);
-$comp-color 	 		   : complement(#222); 
-$border-color    		 : lighten($base-color,60);
-$white           		 : #fff;
-$black           		 : #000;
-$link-color 		     : rgba(#222,0.8);
+$base-color			: #000000; 
+$body-color      	: #F5F5F5;
+$text-color      	: #181818;
+$comp-color 	 	: #000000; 
+$border-color    	: #747474;
+$white           	: #ffffff;
+$black           	: #000000;
+$link-color 		: #6790ab;
 
-$primary			       : #222;
-$success			       : #5cb85c;
-$warning			       : #dd8338;
-$danger				       : #C64537;
-$info				         : #308cbc;
+$primary			: #222222;
+$success			: #5cb85c;
+$warning			: #dd8338;
+$danger				: #C64537;
+$info				: #308cbc;
 
 
 // Screen Size
