fixing todo headers

--- a/todo/todo.css
+++ b/todo/todo.css
@@ -101,19 +101,19 @@ com{
 	display: none;
 }
 
-general {
+New Test. {
     width: 33%;
     position: relative;
     display: table;
     list-style-type: none;
 }
-school {
+Android {
     width: 33%;
     position: relative;
     display: table;
     list-style-type: none;
 }
-work {
+Programming Languages {
     width: 33%;
     position: relative;
     display: table;
