--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -381,6 +381,7 @@ header .entry-meta {
 		padding: 25px 15px;
 		ul{
 			list-style-type: none;
+			margin-top: -15px;
 		}
 		@media #{$medium} {
 			padding: 30px;
