changing config to try to restore blog

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -44,7 +44,10 @@
 			</ul><!-- /.dl-submenu -->
 		</li>
 		<li>
-			<a href="#">Posts</a>
+			<a href="#">Blog</a>
+		</li>
+		<li>
+			<a href="#">Archive</a>
 			<ul class="dl-submenu">
 				<li><a href="{{ site.url }}/posts/">All Posts</a></li>
 				<li><a href="{{ site.url }}/tags/">All Tags</a></li>
