--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -44,7 +44,11 @@
 			</ul><!-- /.dl-submenu -->
 		</li>
 		<li>
-			<a href="#">Blog</a>
+			<a href="#">Projects</a>
+			<ul class="dl-submenu">
+				<li><a href="{{ site.url }}/projects/">Project Blog</a></li>
+				<li><a href="https://github.com/espemi01/" target="_blank">GitHub Source</a></li>
+			</ul>
 		</li>
 		<li>
 			<a href="#">Archive</a>
