--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -51,10 +51,16 @@
 			</ul>
 		</li>
 		<li>
-			<a href="#">Archive</a>
+			<a href="#">Blog</a>
 			<ul class="dl-submenu">
-				<li><a href="{{ site.url }}/posts/">All Posts</a></li>
-				<li><a href="{{ site.url }}/tags/">All Tags</a></li>
+				<li><a href=" {{ site.url }}/blog/">Blog</a></li>
+				<li>
+					<a href="#">Archive</a>
+					<ul class="dl-submenu">
+						<li><a href="{{ site.url }}/posts/">All Posts</a></li>
+						<li><a href="{{ site.url }}/tags/">All Tags</a></li>
+					</ul>
+				</li>
 			</ul>
 		</li>
 		{% for link in site.data.navigation %}
