--- a/_includes/open_nav.html
+++ b/_includes/open_nav.html
@@ -1,5 +1,4 @@
-<nav id="dl-menu" class="dl-menuwrapper" role="navigation">
-	<button class="dl-trigger">Open Menu</button>
+<nav id="open-menu" class="dl-menuwrapper" role="navigation">
 	<ul class="dl-menu">
 		<li><a href="{{ site.url }}/">Home</a></li>
 		<li>
