--- a/_sass/_open-menu.scss
+++ b/_sass/_open-menu.scss
@@ -1,6 +1,8 @@
 .dl-menuwrapper {
 	width: 100%;
 	position: absolute;
+	display: block;
+	opacity: 1;
 	top: 0;
 	left: 0;
 	z-index: 1000;
@@ -174,7 +176,7 @@ All this is done for any sub-level being entered.
 @-webkit-keyframes MenuAnimIn {
 	0% {
 		-webkit-transform: translateZ(300px);
-		opacity: 0;
+		opacity: 1;
 	}
 	100% {
 		-webkit-transform: translateZ(0px);
@@ -184,7 +186,7 @@ All this is done for any sub-level being entered.
 @-moz-keyframes MenuAnimIn {
 	0% {
 		-moz-transform: translateZ(300px);
-		opacity: 0;
+		opacity: 1;
 	}
 	100% {
 		-moz-transform: translateZ(0px);
@@ -194,7 +196,7 @@ All this is done for any sub-level being entered.
 @keyframes MenuAnimIn {
 	0% {
 		transform: translateZ(300px);
-		opacity: 0;
+		opacity: 1;
 	}
 	100% {
 		transform: translateZ(0px);
@@ -321,8 +323,8 @@ All this is done for any sub-level being entered.
 }
 // Fix for IE
 .dl-menu li {
-	display: none
+	display: none;
 }
 .dl-menuopen li {
-	display: block
+	display: block;
 }
