changing link colors

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -24,10 +24,10 @@ $base-color			: #000000;
 $body-color      	: #F5F5F5;
 $text-color      	: #181818;
 $comp-color 	 	: #000000; 
-$border-color    	: #747474;
+$border-color    	: #6790ab;
 $white           	: #ffffff;
 $black           	: #000000;
-$link-color 		: #6790ab;
+$link-color 		: #191919;
 
 $primary			: #222222;
 $success			: #5cb85c;
