--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 {% include head.html %}
+<meta name="robots" content="index">
 </head>
 
 <body id="post-index" {% if page.image.feature %}class="feature"{% endif %}>
